kubernetes/infrastructure/flux/operator/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
  namespace: flux-system
spec:
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Applications
    gethomepage.dev/name: Flux Operator
    gethomepage.dev/icon: flux-cd.svg
    gethomepage.dev/description: Flux Operator for Kubernetes
  hostnames:
    - longhorn.${LOCAL_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: flux-operator
          port: 9080
